feat[Api-Marvel_BFF]: obtencion de todos los heroes lista, busqueda de heroes lista, y el offset para la paginacion, lista

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@bech/express-http-context": "~1.2.5",
     "@bech/logger": "~6.0.0",
     "@bech/trace": "~1.1.1",
+    "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "~4.17.1",
     "express-async-errors": "~3.1.1",
