feat[Api-Marvel-bff]: correccion de linter en varios archivos

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Api-Marvel-BFF",
+  "name": "api-marvel-bff",
   "version": "1.0.0",
   "description": "Api BFF Marvel",
   "artifactType": "BFF",
